cm/templates/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: argocd-vs
spec:
    hosts:
    - argocd.staging.donut.com
    gateways:
    - donutgateway
    tls:
    - match:
      - port: 443
        sniHosts:
        - argocd.staging.donut.com
      route:
      - destination:
           host: argocd-server.argocd.svc.cluster.local
           port:
             number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
spec:
  hosts:
    - grafana.staging.donut.com
  gateways:
    - donutgateway
  http:
    - match:
      - uri:
        prefix: /grafana/
      - uri:
        prefix: /grafana
      rewrite:
        uri: /
      route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000
